# yggdrasil.rs

./: .editorconfig  .gitattributes  .gitignore  .npmignore  Cargo.toml  License.md  Readme.md  grammar.js  package.json  yggdrasil.yg  yggdrasill.yg
projects/bootstrap/: Cargo.toml  readme.md
projects/bootstrap/grammars/: bootstrap.ygg  debug.ygg  dejavu.ygg  json5.ygg  prompt.md
projects/bootstrap/src/: lib.rs  main.rs
projects/bootstrap/tests/: main.rs
projects/bootstript/: Cargo.toml
projects/bootstript/src/: lib.rs  main.rs
projects/bootstript/src/codegen/: mod.rs
projects/bootstript/src/debug/: debug_as_js.rs  mod.rs
projects/bootstript/src/ygg/: errors.rs  mod.rs
projects/bootstript/tests/: main.rs
projects/bootstript/tests/basic/: mod.rs  or_simple.yaml
projects/charset/: Cargo.toml  Readme.md  rustfmt.toml
projects/charset/src/: lib.rs
projects/charset/src/builtin/: generated.rs  mod.rs
projects/charset/src/dump/: mod.rs
projects/charset/src/insert/: mod.rs
projects/charset/src/utils/: arithmetic.rs  mod.rs  save.rs
projects/charset/tests/: main.rs
projects/charset/tests/general_category/: generated.rs  mod.rs
projects/tree-sitter-ygg/: Cargo.toml  binding.gyp  grammar.js  package.json  readme.md
projects/tree-sitter-ygg/bindings/node/: index.js
projects/tree-sitter-ygg/bindings/rust/: lib.rs
projects/tree-sitter-ygg/examples/: test.ygg
projects/tree-sitter-ygg/examples/types/: rust_primitive.toml
projects/tree-sitter-ygg/src/: build.rs  lib.rs  parser.c  scanner.c
projects/tree-sitter-ygg/src/tree_sitter/: grammar.json  node-types.json
projects/tree-sitter-ygg/test/corpus/: bootstrap.cst  expression-basic.yg  expression-prec.yg
projects/ycc/: Cargo.toml  rustfmt.toml
projects/ycc/src/: lib.rs
projects/ygg-bootstrap/: Cargo.toml  build.rs  lr.peg  package.json  ygg.ebnf  ygg.pest
projects/ygg-bootstrap/src/: Readme.md  lib.rs  main.rs  ygg.ebnf  ygg.peg  ygg.rs
projects/ygg-bootstrap/src/as_peg/: extend.rs  mod.rs
projects/ygg-bootstrap/src/ast/: mod.rs  ygg.ebnf  ygg.rs
projects/ygg-bootstrap/src/codegen/: mod.rs
projects/ygg-bootstrap/src/cst/: mod.rs  parse.rs  rule.rs
projects/ygg-bootstrap/src/errors/: error_gen.rs
projects/ygg-bootstrap/src/parser/: ast.rs  mod.rs  ygg.ebnf  ygg.rs
projects/ygg-bootstrap/tests/: grammar.yaml  main.rs  prog.ebnf  prog.ygg  test.yaml  ygg.rs
projects/ygg-bootstrap/tests/peg/: assign.yaml  atom.yaml  grammar.yaml  ignore.yaml  import.yaml  mod.rs  space.yaml  unary.yaml
projects/ygg-bootstript/: Cargo.toml
projects/ygg-bootstript/src/: lib.rs
projects/ygg-bootstript/src/codegen/: mod.rs
projects/ygg-bootstript/src/manager/: mod.rs
projects/ygg-bootstript/src/ygg/: errors.rs  mod.rs
projects/ygg-bootstript/tests/: bootstrap.ygg  main.rs
projects/ygg-bootstript/tests/basic/: concat_simple.yaml  incomplete.yaml  mod.rs  or_simple.yaml  or_tagged.yaml  unary.yaml
projects/ygg-bootstript/tests/codegen/: bootstrap.yaml  mod.rs  unary.yaml
projects/ygg-bootstript/tests/diagnostic/: bootstrap.yaml  duplicate1.yaml  duplicate2.yaml  mod.rs
projects/ygg-bootstript/tests/input_grammar/: mod.rs  unary.yaml
projects/ygg-bootstript/tests/manager/: mod.rs
projects/ygg-bootstript/tests/optimize/: bootstrap.yaml  mod.rs  string_fusion.yaml  unary.yaml
projects/ygg-cli/: Cargo.toml  package.json
projects/ygg-cli/grammars/: external.ygg  json5.ygg
projects/ygg-cli/src/: main.rs
projects/ygg-cli/src/ast/: mod.rs
projects/ygg-cli/src/cache/: mod.rs
projects/ygg-cli/src/config/: Default.json5  Default.toml  mod.rs  modes.rs  patterns.rs
projects/ygg-cli/src/cst/: mod.rs
projects/ygg-cli/src/init/: mod.rs
projects/ygg-cli/src/publish/: mod.rs
projects/ygg-cli/src/subs/: ast.rs  cst.rs  init.rs  mod.rs  new.rs  test.rs  (+1 more)
projects/ygg-cli/tests/: byte.rs  main.rs
projects/ygg-core/: Cargo.toml
projects/ygg-core/src/: bootstrap.ygg  lib.rs
projects/ygg-core/tests/: bootstrap.ygg  main.rs  prog.ygg
projects/ygg-cst-shared/: Cargo.toml
projects/ygg-cst-shared/src/: lib.rs
projects/ygg-error/: Cargo.toml  readme.md
projects/ygg-error/src/: lib.rs
projects/ygg-from-antlr4/: Cargo.toml  build.rs
projects/ygg-from-antlr4/src/: antlr4.peg  lib.rs
projects/ygg-from-antlr4/tests/: csv.ygg  main.rs
projects/ygg-from-pest/: Cargo.toml
projects/ygg-from-pest/src/: lib.rs
projects/ygg-from-pest/tests/: main.rs
projects/ygg-ir/: Cargo.toml  package.json  readme.md
projects/ygg-ir/src/: lib.rs
projects/ygg-ir/tests/: main.rs
projects/ygg-lrpeg/: Cargo.toml
projects/ygg-lrpeg/src/: lib.rs
projects/ygg-lrpeg/tests/: main.rs
projects/ygg-lsp/: Cargo.toml  rustfmt.toml
projects/ygg-lsp/src/: lib.rs  main.rs
projects/ygg-lsp/tests/: .gitignore
projects/ygg-parser/: .gitignore  Cargo.toml  Readme.md  YggdrasilAntlr.g4  YggdrasilBasic.g4  package.json
projects/ygg-parser/grammars/: dejavu.ygg  json5.ygg  syntax.ygg
projects/ygg-parser/src/: ast.rs  bootstrap.rs  bootstrap.ygg  cst.rs  extension.rs  lib.rs  parser.rs  ygg.ebnf  ygg.rs
projects/ygg-parser/tests/: bootstrap.ron  bootstrap.ygg  common.ron  common.vk  common.ygg  json5.ron  json5.ygg  main.rs
projects/ygg-pest/: Cargo.toml  rustfmt.toml  ygg.pest
projects/ygg-pest/src/: lib.rs  ygg.rs
projects/ygg-pest/tests/: main.rs
projects/ygg-rt/: Cargo.toml  Readme.md  package.json
projects/ygg-rt-next/: Cargo.toml
projects/ygg-rt-next/src/: lib.rs
projects/ygg-rt-next/tests/: main.rs
projects/ygg-rt/benches/: stack.rs
projects/ygg-rt/src/: error.rs  errors.rs  lib.rs  macros.rs  parser.rs  parser_state.rs  position.rs  pratt_parser.rs  prec_climber.rs  span.rs  token.rs
projects/ygg-rt/tests/: calculator.rs  json.rs  json2.rs  main.rs  stack.rs  suffix.rs
projects/ygg-shared/: Cargo.toml  Readme.md  package.json
projects/ygg-shared/src/: lib.rs
projects/ygg-tree-sitter/: Cargo.toml
projects/ygg-wasi/: Cargo.toml  package.json  readme.md
projects/ygg-wasi/src/: lib.rs
projects/ygg-wasi/tests/: main.rs
projects/ygg-wasi/wit/: world.wit
(+582 files in other folders)
