[package]
name = "bootstript-yg"
publish = false
description = "Yggdrasil grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
license = "MPL2.0"
readme = "bindings/rust/readme.md"
keywords = ["incremental", "parsing", "rust"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-rust"
edition = "2018"

include = [
    "src/*",
]

[dependencies]
lsp-types = "0.90"

tree-sitter = "0.20"
tree-sitter-yg = {version="0.1", path = "../tree-sitter-yg"}


[dev-dependencies]


[build-dependencies]
