[package]
name = "yggdrasil-bootstript"
publish = false
description = "Yggdrasil grammar for the tree-sitter parsing library"
version = "0.1.1"
authors = ["Aster <192608617@qq.com>"]
license = "MPL2.0"
readme = "../../readme.md"
keywords = ["incremental", "parsing", "rust"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-rust"
edition = "2018"

include = [
    "src/*",
]

[dependencies]
lsp-types = "0.90"

tree-sitter = "0.20"
tree-sitter-cli = "0.20"
tree-sitter-yg = {version="0.1", path = "../tree-sitter-yg"}
indexmap = "1.7"
convert_case = "0.4"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]


[build-dependencies]
