[package]
name = "tree-sitter-ygg"
description = "Yggdrasil grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
license = "MIT"
readme = "bindings/rust/readme.md"
keywords = ["incremental", "parsing", "rust"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ygg-lang/yggdrasil-rs"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]
autoexamples = false

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"

[dev-dependencies]

[build-dependencies]
cc = "1.0"
