[package]
name = "tree-sitter-ygg"
description = "Yggdrasil grammar for the tree-sitter parsing library"
version = "0.2.0"
authors = ["Aster <192608617@qq.com>"]
license = "MIT"
readme = "readme.md"
keywords = ["incremental", "parsing", "rust"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ygg-lang/yggdrasil-rs"
edition = "2018"
build = "src/build.rs"
autoexamples = false

include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.20"

[dev-dependencies]

[build-dependencies]
cc = "1.0"
