[package]
name = "yggdrasil-bootstrap"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
peginator = "0.2.5"
unicode-xid = "0.2.4"
railroad = { version = "0.1.1", optional = true }

[dependencies.yggdrasil-rt]
version = "0.1"
path = "../ygg-rt"
features = ["lsp"]

[dependencies.yggdrasil-ir]
version = "0.1"
path = "../ygg-ir"

[dependencies.yggdrasil-error]
version = "0.1.1"
path = "../ygg-error"
features = ["peginator"]


[dev-dependencies]

[build-dependencies]
peginator = "0.2.5"

[features]
default = ["railroad"]