[package]
name = "yggdrasil-bootstript"
publish = false
description = "Yggdrasil grammar for the tree-sitter parsing library"
version = "0.1.1"
authors = ["Aster <192608617@qq.com>"]
license = "MPL2.0"
readme = "../../readme.md"
keywords = ["incremental", "parsing", "rust"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ygg-lang/yggdrasil-rs"
edition = "2018"

include = [
    "src/*",
]

[dependencies]
# same as tower-lsp = "0.14"
lsp-types = { version = "0.89", features = ["proposed"] }
tokio = { version = "1.12", features = ["io-std", "rt-multi-thread", "macros", "test-util"] }
tree-sitter = "0.20"
# tree-sitter-cli = { version = "0.20", git = "https://github.com/ygg-lang/tree-sitter" }
tree-sitter-cli = { version = "0.20", path = "../../../tree-sitter/cli"}
tree-sitter-ygg = { version="0.1", path = "../tree-sitter-ygg"}
serde_json = "1.0"
indexmap = "1.7"
convert_case = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rkyv = "0.7"
toml = "0.5"
dashmap = "4.0"

[dev-dependencies]


[build-dependencies]
