[package]
name = "ycc"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Command-line Compiler"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "ycc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.66"
diagnostic-quick = "0.2.3"

[dependencies.yggdrasil-core]
#version = "0.1"
path = "../ygg-core"
