[package]
name = "ycc"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Command-line Compiler"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "ycc"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
tracing = "0.1.37"
wax = "0.6.0"
json5 = "0.4.1"
toml = "0.8.2"
#yaml = "0.3.0"

[dependencies.yggdrasil-shared]
version = "0.2.*"
path = "../ygg-core"
features = []

[dependencies.yggdrasil-error]
version = "0.1.*"
path = "../ygg-error"
features = ["json5", "wax"]