[package]
name = "ycc"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Command-line Compiler"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "ycc"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
tracing = "0.1.40"
wax = "0.6.0"
json5 = "0.4.1"
toml = "0.8.10"
#yaml = "0.3.0"

[dependencies.yggdrasil-shared]
version = "0.2.5"
path = "../ygg-core"
features = ["serde"]

[dependencies.yggdrasil-error]
version = "0.1.4"
path = "../ygg-error"
features = ["toml", "json5", "wax"]
