[package]
name = "yggdrasil-core"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.163"
pex-trie = "0.0.1"
proc-macro2 = "1.0.52"
character-set = "0.4.0"
unicode-xid = "0.2.4"
railroad = { version = "0.2.0", optional = true }
convert_case = "0.6.0"
askama = "0.12.0"
# rust code generator
quote = "1.0.27"
syn = "2.0.15"

[dependencies.yggdrasil-rt]
#version = "0.1"
path = "../ygg-rt"
features = ["lsp"]

[dependencies.yggdrasil-ir]
version = "0.1"
path = "../ygg-ir"

[dependencies.yggdrasil-parser]
#version = "0.1.2"
path = "../ygg-parser"

[dev-dependencies]
serde_yaml = "0.9.19"
json5 = "0.4.1"

[features]
default = []
