[package]
name = "yggdrasil-shared"
version = "0.2.3"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
pex-trie = "0.0.3"
proc-macro2 = "1.0.68"
character-set = "0.4.0"
unicode-xid = "0.2.4"
convert_case = "0.6.0"
askama = "0.12.1"
itertools = "0.11.0"
# svg support
railroad = "0.2.0"
html-minifier = "4.0.0"

[dependencies.yggdrasil-ir]
version = "0.1.*"
path = "../ygg-ir"

[dependencies.yggdrasil-parser]
version = "0.0.*"
path = "../ygg-parser"

[dependencies.yggdrasil-error]
version = "0.1.*"
path = "../ygg-error"
features = ["askama", "antlr-rust"]

[dev-dependencies]
serde_yaml = "0.9.25"
json5 = "0.4.1"

[features]
default = []