[package]
name = "yggdrasil-shared"
version = "0.2.5"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Compiler core shared components"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-shared"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
pex-trie = "0.0.3"
character-set = "0.4.0"
unicode-xid = "0.2.4"
convert_case = "0.6.0"
askama = "0.12.1"
itertools = "0.11.0"
railroad = "0.2.0"
html-minifier = "4.0.0"

[dependencies.yggdrasil-ir]
version = "0.1.*"
path = "../ygg-ir"

[dependencies.yggdrasil-parser]
version = "0.1.*"
path = "../ygg-parser"

[dependencies.yggdrasil-error]
version = "0.1.*"
path = "../ygg-error"
features = ["askama", "yggdrasil-rt"]

[dev-dependencies]
serde_yaml = "0.9.25"
json5 = "0.4.1"

[features]
default = []