[package]
name = "yggdrasil-cst-shared"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
pest = { version = "2.1", git = "https://github.com/ygg-lang/pest" }
lsp-types = { version = "0.89", features = ["proposed"], optional = true }

[features]
default = ["lsp"]
lsp = ["lsp-types"]