[package]
name = "yggdrasil-error"
version = "0.1.4"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil shared error handlers"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196" }
# parser
num = { version = "0.4.1", optional = true }
askama = { version = "0.12.1", optional = true }
antlr-rust = { version = "0.3.0-beta", optional = true }
# serde
toml = { version = "0.8.10", optional = true }
json5 = { version = "0.4.1", optional = true }
# cli
wax = { version = "0.6.0", optional = true }

[dependencies.diagnostic]
version = "0.6.1"
#path = 'C:\Users\Dell\CLionProjects\diagnostic-rs\projects\diagnostic'
features = ["serde", "url"]

[dependencies.validatus]
version = "0.0.6"
#path = 'C:\Users\Dell\CLionProjects\diagnostic-rs\projects\validation'

[dependencies.yggdrasil-rt]
version = "0.1.*"
path = "../ygg-rt"
optional = true




[features]
default = []
