[package]
name = "ygg-from-antlr4"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
lrpeg = { version = "0.4", git = "https://github.com/seanyoung/lrpeg" }
regex = "1.5.4"
unicode-xid = "0.2.2"
anyhow = "1.0.50"

[dev-dependencies]

[build-dependencies]
lrpeg = { version = "0.4", git = "https://github.com/seanyoung/lrpeg" }

[features]
