[package]
name = "ygg-from-pest"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
pest_meta = "2.1.3"
anyhow = "1.0.51"

[dev-dependencies]

[features]
