[package]
name = "yggdrasil-ir"
version = "0.1.6"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Language IR"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-ir"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
character-set = "0.4.0"
regex-automata = { version = "0.4.1", features = ["std"] }
convert_case = "0.6.0"
indexmap = { version = "2.0.2" }
#ucd-trie = "0.1.6"
#ucd-util = "0.2.1"
#lazy_static = "1.4.0"
num = { version = "0.4.1" }
serde = { version = "1.0.188", optional = true}
url = { version = "2.4.1"}

[dependencies.yggdrasil-parser]
version = "0.1.*"
path = "../ygg-parser"

[dependencies.yggdrasil-error]
version = "0.1.*"
path = "../ygg-error"
features = ["yggdrasil-rt"]

[features]
serde = ["dep:serde", "serde/derive", "indexmap/serde", "num/serde", "url/serde"]