[package]
name = "yggdrasil-ir"
version = "0.1.6"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Language IR"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-ir"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", optional = true }
itertools = "0.12.1"
regex-automata = { version = "0.4.5", features = ["std"] }
convert_case = "0.6.0"
indexmap = { version = "2.2.3" }
num = { version = "0.4.1" }

[dependencies.yggdrasil-parser]
version = "0.1.*"
path = "../ygg-parser"

[dependencies.yggdrasil-error]
version = "0.1.*"
path = "../ygg-error"
features = ["yggdrasil-rt", "num"]

[features]
serde = ["dep:serde", "serde/derive", "indexmap/serde", "num/serde"]
