[package]
name = "yggdrasil-codegen-lrpeg"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"


[dependencies]
lrpeg = "0.4"
yggdrasil-core = { version = "0.1", path = "../ygg-core" }

[build-dependencies]


[dev-dependencies]

[features]
