[package]
name = "yggdrasil-lsp"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Language Server"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
yggdrasil-core = { version = "0.1", path = "../ygg-core" }
futures = { version = "0.3.24", features = ["compat"] }
# jsonrpc-core = "14.0"
# jsonrpc-derive = "14.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["io-std", "rt-multi-thread", "macros", "test-util"] }
lspower = "1.5.0"
unicode-xid = "0.2.4"
itertools = "0.10.5"
