[package]
name = "yggdrasil-lsp"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Language Server"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
yggdrasil-bootstrap = { version = "0.1", path = "../ygg-bootstrap" }
futures = { version = "0.3.25", features = ["compat"] }
# jsonrpc-core = "14.0"
# jsonrpc-derive = "14.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["io-std", "rt-multi-thread", "macros", "test-util"] }
lspower = "1.5.0"
unicode-xid = "0.2.4"
itertools = "0.10.5"
