[package]
name = "yggdrasil-parser"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-parser"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"

[dependencies.antlr-rust]
version = "0.3.0-beta"

[dependencies.yggdrasil-ir]
version = "0.1.*"
#features = ["pretty-print", "std", "lispify"]
path = "../ygg-ir"

#[dependencies.nyar-error]
#features = []
#version = "0.1.4"
#path = 'C:\Users\Dell\CLionProjects\nyar-vm\projects\nyar-error'

[dev-dependencies]


[build-dependencies]
