[package]
name = "yggdrasil-parser"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil parser by yggdrasil"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-parser"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#tracing = "0.1.37"

#[dependencies.antlr-rust]
#version = "0.3.0-beta"

[dependencies.yggdrasil-rt]
version = "0.0.*"
path = "../ygg-rt"

[dev-dependencies]


[build-dependencies]
