[package]
name = "yggdrasil-parser"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil parser by yggdrasil"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-parser"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "2.2.6"
#tracing = "0.1.37"

#[dependencies.antlr-rust]
#version = "0.3.0-beta"

[dependencies.yggdrasil-error]
version = "0.1.*"
path = "../ygg-error"
features = ["yggdrasil-rt", "num"]

[dependencies.yggdrasil-ir]
version = "0.1.*"
path = "../ygg-ir"
features = []

[dependencies.yggdrasil-rt]
version = "0.1.*"
path = "../ygg-rt"
features = []

[dev-dependencies]


[build-dependencies]
