[package]
name = "ygg-pest"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"


[dependencies]
pest = "2.1"

[dev-dependencies]
pest_generator = "2.1"
quote = "1.0"
