[package]
name = "yggdrasil-rt"
version = "0.1.3"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-rt"
keywords = ["parser", "generator", "peg", "grammar"]
categories = ["parsing"]
license = "MPL-2.0"
readme = "readme.md"
edition = "2021"

[features]
default = []
dynamic = []

[dependencies]
serde = { version = "1.0.197", optional = true }
regex-automata = "0.4.6"
# memchr = { version = "2", optional = true }
# ucd-trie = { version = "0.1.5", optional = true, default-features = false }
daachorse = "1.0.0"
