[package]
name = "yggdrasil-shared"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "AWSL Window Structure Language"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
lsp-types = { version = "0.91.1", features = ["proposed"], optional = true }
lsp-document = { version = "*", optional = true }
url = { version = "2.2.2", optional = true }
thiserror = "1.0.30"
anyhow = "1.0.50"

[features]
default = ["lsp"]
lsp = ["lsp-types", "lsp-document", "url"]
