[package]
name = "yggdrasil-shared"
version = "0.1.2"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
lsp-types = { version = "0.91.1", features = ["proposed"], optional = true }
lsp-document = { version = "0.4.0", optional = true }
url = "2.2.2"
thiserror = "1.0.30"
anyhow = "1.0.51"
ariadne = "0.1.3"
ropey = "1.3.1"
dashmap = "4.0.2"

[features]
default = ["lsp"]
lsp = ["lsp-types", "lsp-document"]
