[package]
name = "wit-bindgen-yggdrasil"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
documentation = "https://docs.rs/yggdrasil-rt"
keywords = ["parser", "generator", "peg", "grammar"]
categories = ["parsing"]
license = "MPL-2.0"
readme = "readme.md"
edition = "2021"

[features]
default = []
dynamic = []


[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.22.0"